feat: init db
