# docs/swagger.json
@@ -1,13 +1,13 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is api document for APP API project.",
-        "title": "APP API DOCUMENT",
+        "description": "This is api document for BOOKSTORE SERVICE project.",
+        "title": "BOOKSTORE SERVICE",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
-            "name": "Andy",
+            "name": "Datpv",
             "url": "https://d.foundation",
-            "email": "andy@d.foundation"
+            "email": "datphammail@gmail.com"
         },
         "license": {
             "name": "Apache 2.0",
@@ -98,6 +98,84 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/MessageResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/portal/books": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get list of books",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Book"
+                ],
+                "summary": "Get list of books",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Page",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page Size",
+                        "name": "page_size",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort",
+                        "name": "sort",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Query",
+                        "name": "query",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Topic ID",
+                        "name": "topic_id",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/GetBooksResponse"
                         }
                     },
                     "400": {
@@ -302,6 +380,23 @@
                 }
             }
         },
+        "Book": {
+            "type": "object",
+            "properties": {
+                "author": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "topic": {
+                    "$ref": "#/definitions/Topic"
+                }
+            }
+        },
         "ErrorDetail": {
             "type": "object",
             "required": [
@@ -339,6 +434,20 @@
                 },
                 "traceId": {
                     "type": "string"
+                }
+            }
+        },
+        "GetBooksResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/Book"
+                    }
+                },
+                "metadata": {
+                    "$ref": "#/definitions/Metadata"
                 }
             }
         },
@@ -407,6 +516,35 @@
                 }
             }
         },
+        "Metadata": {
+            "type": "object",
+            "required": [
+                "page",
+                "pageSize",
+                "totalPages",
+                "totalRecords"
+            ],
+            "properties": {
+                "hasNext": {
+                    "type": "boolean"
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "pageSize": {
+                    "type": "integer"
+                },
+                "sort": {
+                    "type": "string"
+                },
+                "totalPages": {
+                    "type": "integer"
+                },
+                "totalRecords": {
+                    "type": "integer"
+                }
+            }
+        },
         "SignupRequest": {
             "type": "object",
             "required": [
@@ -428,6 +566,20 @@
                     "type": "string"
                 },
                 "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "Topic": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
                     "type": "string"
                 }
             }
